deploy: 5574398d987c8e91762e39762d947ff7ca5dba68

--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -1,3 +1,14 @@
+body {
+  color: #ADBAC7;
+}
+.wy-body-for-nav {
+  background: #22272E;
+}
+
+.wy-nav-content {
+  background: #22272E;
+}
+
 .wy-side-nav-search {
   background-color: #212529;
 }
