--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -2,11 +2,11 @@ body {
   color: #ADBAC7;
 }
 .wy-body-for-nav {
-  background: #22272E;
+  background-color: #22272E;
 }
 
 .wy-nav-content {
-  background: #22272E;
+  background-color: #22272E;
 }
 
 .wy-side-nav-search {
@@ -14,7 +14,7 @@ body {
 }
 
 .wy-nav-side {
-  background: #121416;
+  background-color: #121416;
 }
 
 td, th {
