deploy: 62b9f14aa9023f4ff095832f70519b9315efda0a

--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -21,6 +21,10 @@ td, th {
   color: #ADBAC7;
 }
 
+.wy-menu-vertical .navtree li.toctree-l2.current, .wy-menu-vertical .navtree li.toctree-l2.current > a {
+  background-color: #212529;
+}
+
 .admonition code {
   background-color: #22272E;
 }
