--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -25,6 +25,6 @@ td, th {
   background-color: #212529;
 }
 
-.admonition code {
+.wy-table-odd td, .wy-table-striped tr:nth-child(2n-1) td, .rst-content table.docutils:not(.field-list) tr:nth-child(2n-1) td {
   background-color: #22272E;
 }
