--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -23,6 +23,7 @@ td, th {
 
 .wy-menu-vertical .navtree li.toctree-l2.current, .wy-menu-vertical .navtree li.toctree-l2.current > a {
   background-color: #212529;
+  color: #ADBAC7;
 }
 
 .wy-table-odd td, .wy-table-striped tr:nth-child(2n-1) td, .rst-content table.docutils:not(.field-list) tr:nth-child(2n-1) td {
