deploy: b7e21c0bf4c39b40a52472e79ed2f54d68bd6b07

--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -36,5 +36,5 @@ td, th {
 }
 
 .wy-menu-vertical .navtree li.toctree-l2.current > a, .wy-menu-vertical .navtree li.toctree-l2.current > span {
-  color: #ADBAC7;
+  color: #ADBAC7 !important;
 }
