--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -32,7 +32,7 @@ td, th {
 
 .wy-menu-vertical ul.navtree.subnav-l1 ul.subnav-l2, .wy-menu-vertical ul.navtree.subnav-l1 li.toctree-l2.current li.toctree-l3 > a {
   background-color: #22272E;
-  color: #ADBAC7;
+  color: #CAD2DA;
 }
 
 .wy-menu-vertical .navtree li.toctree-l2.current > a, .wy-menu-vertical .navtree li.toctree-l2.current > span {
