--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -42,3 +42,7 @@ td, th {
 .wy-menu-vertical ul.navtree.subnav-l1 li.toctree-l2.current li.toctree-l3.current > a, .wy-menu-vertical ul.navtree.subnav-l1 li.toctree-l3.current li.toctree-l4 > a {
   background-color: #22272E;
 }
+
+.wy-menu-vertical ul.tocbase li.toctree-l3.current li.toctree-l4.current > a, .wy-menu-vertical li.toctree-l4.current li.toctree-l5 > a {
+  background-color: #22272E;
+}
