--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -50,3 +50,8 @@ td, th {
 .wy-menu-vertical ul.tocbase li.toctree-l3.current li.toctree-l4.current > a, .wy-menu-vertical li.toctree-l4.current li.toctree-l5 > a {
   background-color: #22272E;
 }
+
+
+.toctree-l4 {
+  color: #CAD2DA;
+}
