deploy: d87bbbbf81b6b202650b0e9a99897a349adb275b

--- a/_stylesheets/extra.css
+++ b/_stylesheets/extra.css
@@ -51,15 +51,6 @@ td, th {
   background-color: #22272E;
 }
 
-
-.toctree-l4 {
-  color: #CAD2DA;
-}
-
-.toctree-l5 {
-  color: #CAD2DA;
-}
-
-.toctree-l6 {
+.wy-menu-vertical ul.tocbase li a {
   color: #CAD2DA;
 }
